src/main/java/goal/parser/antlr/GOALParser.java
// Generated from GOALParser.g4 by ANTLR 4.4
package goal.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GOALParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTERNAL=55, BELIEF=35, MAIN=4, FOCUS=6, ORDER=21, RBR=68, LOG=43, KR_CRBR=81, 
		CLBR=69, NEW=8, DO=32, EQUALS=64, FLOAT=59, PRE=56, RANDOM=25, NOT=33, 
		KR_LBR=83, ID=58, DEFINE=27, RTLARROW=73, SENDONCE=45, LBR=67, IF=28, 
		BELIEFS=18, DOUBLESTRING=76, SRBR=72, LINEAR=23, IMPORT=1, ALLOTHER=47, 
		THEN=31, INSERT=41, ALWAYS=13, COMMA=66, SOME=50, ALL=48, THIS=52, KNOWLEDGE=17, 
		BLOCK_COMMENT=78, PLUS=62, SEND=46, ADOPT=39, KR_STATEMENT=85, DOT=65, 
		ENVIRONMENTAL=54, SELECT=10, ACTIONSPEC=53, EXITMODULE=11, GOAL=38, SOMEOTHER=49, 
		LINEARALL=22, EXIT=12, KR_BLOCK=82, LTRARROW=74, LINE_COMMENT=77, AGOAL=36, 
		LISTALL=30, FORALL=29, GOALS=19, KR_CLBR=80, INT=60, DELETE=42, MINUS=63, 
		NOGOALS=15, MODULE=2, EVENT=5, KR_RBR=84, TRUE=34, PRINT=44, COLON=61, 
		SLBR=71, WS=79, ADAPTIVE=26, DROP=40, SINGLESTRING=75, NOACTION=16, NONE=7, 
		FILTER=9, POST=57, PROGRAM=20, RANDOMALL=24, CRBR=70, NEVER=14, SELF=51, 
		INIT=3, GOALA=37;
	public static final String[] tokenNames = {
		"<INVALID>", "'#import'", "'module'", "'init'", "'main'", "'event'", "'focus'", 
		"'none'", "'new'", "'filter'", "'select'", "'exit-module'", "'exit'", 
		"'always'", "'never'", "'nogoals'", "'noaction'", "'knowledge'", "'beliefs'", 
		"'goals'", "'program'", "'order'", "'linearall'", "'linear'", "'randomall'", 
		"'random'", "'adaptive'", "'#define'", "'if'", "'forall'", "'listall'", 
		"'then'", "'do'", "'not'", "'true'", "'bel'", "'a-goal'", "'goal-a'", 
		"'goal'", "'adopt'", "'drop'", "'insert'", "'delete'", "'log'", "'print'", 
		"'sendonce'", "'send'", "'allother'", "'all'", "'someother'", "'some'", 
		"'self'", "'this'", "'actionspec'", "'@env'", "'@int'", "'pre'", "'post'", 
		"ID", "FLOAT", "INT", "':'", "'+'", "'-'", "'='", "'.'", "','", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "'<-'", "'->'", "SINGLESTRING", "DOUBLESTRING", 
		"LINE_COMMENT", "BLOCK_COMMENT", "WS", "KR_CLBR", "KR_CRBR", "KR_BLOCK", 
		"KR_LBR", "KR_RBR", "KR_STATEMENT"
	};
	public static final int
		RULE_modules = 0, RULE_moduleImport = 1, RULE_module = 2, RULE_moduleDef = 3, 
		RULE_moduleOptions = 4, RULE_moduleOption = 5, RULE_exitOption = 6, RULE_focusOption = 7, 
		RULE_knowledge = 8, RULE_beliefs = 9, RULE_goals = 10, RULE_actionSpecs = 11, 
		RULE_actionSpec = 12, RULE_actionPre = 13, RULE_actionPost = 14, RULE_function = 15, 
		RULE_program = 16, RULE_macro = 17, RULE_orderOption = 18, RULE_programRule = 19, 
		RULE_ifRule = 20, RULE_forallRule = 21, RULE_listallRule = 22, RULE_conditions = 23, 
		RULE_condition = 24, RULE_mentalRule = 25, RULE_mentalAction = 26, RULE_mentalAtom = 27, 
		RULE_actions = 28, RULE_action = 29, RULE_actionAtom = 30, RULE_selector = 31, 
		RULE_selectExp = 32, RULE_anonModule = 33;
	public static final String[] ruleNames = {
		"modules", "moduleImport", "module", "moduleDef", "moduleOptions", "moduleOption", 
		"exitOption", "focusOption", "knowledge", "beliefs", "goals", "actionSpecs", 
		"actionSpec", "actionPre", "actionPost", "function", "program", "macro", 
		"orderOption", "programRule", "ifRule", "forallRule", "listallRule", "conditions", 
		"condition", "mentalRule", "mentalAction", "mentalAtom", "actions", "action", 
		"actionAtom", "selector", "selectExp", "anonModule"
	};

	@Override
	public String getGrammarFileName() { return "GOALParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GOALParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModulesContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GOALParser.EOF, 0); }
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public List<ModuleImportContext> moduleImport() {
			return getRuleContexts(ModuleImportContext.class);
		}
		public ModuleImportContext moduleImport(int i) {
			return getRuleContext(ModuleImportContext.class,i);
		}
		public ModulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modules; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitModules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModulesContext modules() throws RecognitionException {
		ModulesContext _localctx = new ModulesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_modules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(70);
				switch (_input.LA(1)) {
				case IMPORT:
					{
					setState(68); moduleImport();
					}
					break;
				case MODULE:
				case INIT:
				case MAIN:
				case EVENT:
					{
					setState(69); module();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IMPORT) | (1L << MODULE) | (1L << INIT) | (1L << MAIN) | (1L << EVENT))) != 0) );
			setState(74); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleImportContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(GOALParser.DOT, 0); }
		public TerminalNode IMPORT() { return getToken(GOALParser.IMPORT, 0); }
		public TerminalNode DOUBLESTRING() { return getToken(GOALParser.DOUBLESTRING, 0); }
		public ModuleImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleImport; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitModuleImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleImportContext moduleImport() throws RecognitionException {
		ModuleImportContext _localctx = new ModuleImportContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleImport);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); match(IMPORT);
			setState(77); match(DOUBLESTRING);
			setState(78); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode CRBR() { return getToken(GOALParser.CRBR, 0); }
		public ActionSpecsContext actionSpecs() {
			return getRuleContext(ActionSpecsContext.class,0);
		}
		public GoalsContext goals() {
			return getRuleContext(GoalsContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public BeliefsContext beliefs() {
			return getRuleContext(BeliefsContext.class,0);
		}
		public KnowledgeContext knowledge() {
			return getRuleContext(KnowledgeContext.class,0);
		}
		public TerminalNode CLBR() { return getToken(GOALParser.CLBR, 0); }
		public TerminalNode SLBR() { return getToken(GOALParser.SLBR, 0); }
		public TerminalNode SRBR() { return getToken(GOALParser.SRBR, 0); }
		public ModuleDefContext moduleDef() {
			return getRuleContext(ModuleDefContext.class,0);
		}
		public ModuleOptionsContext moduleOptions() {
			return getRuleContext(ModuleOptionsContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); moduleDef();
			setState(85);
			_la = _input.LA(1);
			if (_la==SLBR) {
				{
				setState(81); match(SLBR);
				setState(82); moduleOptions();
				setState(83); match(SRBR);
				}
			}

			setState(87); match(CLBR);
			setState(89);
			_la = _input.LA(1);
			if (_la==KNOWLEDGE) {
				{
				setState(88); knowledge();
				}
			}

			setState(92);
			_la = _input.LA(1);
			if (_la==BELIEFS) {
				{
				setState(91); beliefs();
				}
			}

			setState(95);
			_la = _input.LA(1);
			if (_la==GOALS) {
				{
				setState(94); goals();
				}
			}

			setState(98);
			_la = _input.LA(1);
			if (_la==PROGRAM) {
				{
				setState(97); program();
				}
			}

			setState(101);
			_la = _input.LA(1);
			if (_la==ACTIONSPEC) {
				{
				setState(100); actionSpecs();
				}
			}

			setState(103); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleDefContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(GOALParser.MODULE, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode EVENT() { return getToken(GOALParser.EVENT, 0); }
		public TerminalNode INIT() { return getToken(GOALParser.INIT, 0); }
		public TerminalNode MAIN() { return getToken(GOALParser.MAIN, 0); }
		public ModuleDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitModuleDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDefContext moduleDef() throws RecognitionException {
		ModuleDefContext _localctx = new ModuleDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_moduleDef);
		try {
			setState(113);
			switch (_input.LA(1)) {
			case MODULE:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(105); match(MODULE);
				setState(106); function();
				}
				}
				break;
			case INIT:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(107); match(INIT);
				setState(108); match(MODULE);
				}
				}
				break;
			case MAIN:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(109); match(MAIN);
				setState(110); match(MODULE);
				}
				}
				break;
			case EVENT:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(111); match(EVENT);
				setState(112); match(MODULE);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleOptionsContext extends ParserRuleContext {
		public ModuleOptionContext moduleOption(int i) {
			return getRuleContext(ModuleOptionContext.class,i);
		}
		public List<ModuleOptionContext> moduleOption() {
			return getRuleContexts(ModuleOptionContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(GOALParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GOALParser.COMMA, i);
		}
		public ModuleOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleOptions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitModuleOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleOptionsContext moduleOptions() throws RecognitionException {
		ModuleOptionsContext _localctx = new ModuleOptionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moduleOptions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); moduleOption();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(116); match(COMMA);
				setState(117); moduleOption();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleOptionContext extends ParserRuleContext {
		public ExitOptionContext exitOption() {
			return getRuleContext(ExitOptionContext.class,0);
		}
		public FocusOptionContext focusOption() {
			return getRuleContext(FocusOptionContext.class,0);
		}
		public ModuleOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleOption; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitModuleOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleOptionContext moduleOption() throws RecognitionException {
		ModuleOptionContext _localctx = new ModuleOptionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_moduleOption);
		try {
			setState(125);
			switch (_input.LA(1)) {
			case EXIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(123); exitOption();
				}
				break;
			case FOCUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(124); focusOption();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExitOptionContext extends ParserRuleContext {
		public TerminalNode NOACTION() { return getToken(GOALParser.NOACTION, 0); }
		public TerminalNode EQUALS() { return getToken(GOALParser.EQUALS, 0); }
		public TerminalNode NOGOALS() { return getToken(GOALParser.NOGOALS, 0); }
		public TerminalNode NEVER() { return getToken(GOALParser.NEVER, 0); }
		public TerminalNode EXIT() { return getToken(GOALParser.EXIT, 0); }
		public TerminalNode ALWAYS() { return getToken(GOALParser.ALWAYS, 0); }
		public ExitOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exitOption; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitExitOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExitOptionContext exitOption() throws RecognitionException {
		ExitOptionContext _localctx = new ExitOptionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exitOption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(EXIT);
			setState(128); match(EQUALS);
			setState(129);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALWAYS) | (1L << NEVER) | (1L << NOGOALS) | (1L << NOACTION))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FocusOptionContext extends ParserRuleContext {
		public TerminalNode FOCUS() { return getToken(GOALParser.FOCUS, 0); }
		public TerminalNode NEW() { return getToken(GOALParser.NEW, 0); }
		public TerminalNode NONE() { return getToken(GOALParser.NONE, 0); }
		public TerminalNode EQUALS() { return getToken(GOALParser.EQUALS, 0); }
		public TerminalNode FILTER() { return getToken(GOALParser.FILTER, 0); }
		public TerminalNode SELECT() { return getToken(GOALParser.SELECT, 0); }
		public FocusOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_focusOption; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitFocusOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FocusOptionContext focusOption() throws RecognitionException {
		FocusOptionContext _localctx = new FocusOptionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_focusOption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); match(FOCUS);
			setState(132); match(EQUALS);
			setState(133);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NONE) | (1L << NEW) | (1L << FILTER) | (1L << SELECT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KnowledgeContext extends ParserRuleContext {
		public TerminalNode CRBR() { return getToken(GOALParser.CRBR, 0); }
		public TerminalNode KNOWLEDGE() { return getToken(GOALParser.KNOWLEDGE, 0); }
		public TerminalNode KR_BLOCK(int i) {
			return getToken(GOALParser.KR_BLOCK, i);
		}
		public TerminalNode CLBR() { return getToken(GOALParser.CLBR, 0); }
		public List<TerminalNode> KR_BLOCK() { return getTokens(GOALParser.KR_BLOCK); }
		public KnowledgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_knowledge; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitKnowledge(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KnowledgeContext knowledge() throws RecognitionException {
		KnowledgeContext _localctx = new KnowledgeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_knowledge);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(KNOWLEDGE);
			setState(136); match(CLBR);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KR_BLOCK) {
				{
				{
				setState(137); match(KR_BLOCK);
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeliefsContext extends ParserRuleContext {
		public TerminalNode BELIEFS() { return getToken(GOALParser.BELIEFS, 0); }
		public TerminalNode CRBR() { return getToken(GOALParser.CRBR, 0); }
		public TerminalNode KR_BLOCK(int i) {
			return getToken(GOALParser.KR_BLOCK, i);
		}
		public TerminalNode CLBR() { return getToken(GOALParser.CLBR, 0); }
		public List<TerminalNode> KR_BLOCK() { return getTokens(GOALParser.KR_BLOCK); }
		public BeliefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beliefs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitBeliefs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeliefsContext beliefs() throws RecognitionException {
		BeliefsContext _localctx = new BeliefsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_beliefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); match(BELIEFS);
			setState(146); match(CLBR);
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KR_BLOCK) {
				{
				{
				setState(147); match(KR_BLOCK);
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalsContext extends ParserRuleContext {
		public TerminalNode CRBR() { return getToken(GOALParser.CRBR, 0); }
		public TerminalNode KR_BLOCK(int i) {
			return getToken(GOALParser.KR_BLOCK, i);
		}
		public TerminalNode CLBR() { return getToken(GOALParser.CLBR, 0); }
		public List<TerminalNode> KR_BLOCK() { return getTokens(GOALParser.KR_BLOCK); }
		public TerminalNode GOALS() { return getToken(GOALParser.GOALS, 0); }
		public GoalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goals; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitGoals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalsContext goals() throws RecognitionException {
		GoalsContext _localctx = new GoalsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_goals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155); match(GOALS);
			setState(156); match(CLBR);
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KR_BLOCK) {
				{
				{
				setState(157); match(KR_BLOCK);
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(163); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionSpecsContext extends ParserRuleContext {
		public TerminalNode ACTIONSPEC() { return getToken(GOALParser.ACTIONSPEC, 0); }
		public TerminalNode CRBR() { return getToken(GOALParser.CRBR, 0); }
		public List<ActionSpecContext> actionSpec() {
			return getRuleContexts(ActionSpecContext.class);
		}
		public TerminalNode CLBR() { return getToken(GOALParser.CLBR, 0); }
		public ActionSpecContext actionSpec(int i) {
			return getRuleContext(ActionSpecContext.class,i);
		}
		public ActionSpecsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionSpecs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitActionSpecs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionSpecsContext actionSpecs() throws RecognitionException {
		ActionSpecsContext _localctx = new ActionSpecsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_actionSpecs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165); match(ACTIONSPEC);
			setState(166); match(CLBR);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(167); actionSpec();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionSpecContext extends ParserRuleContext {
		public ActionPreContext actionPre() {
			return getRuleContext(ActionPreContext.class,0);
		}
		public TerminalNode CRBR() { return getToken(GOALParser.CRBR, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode ENVIRONMENTAL() { return getToken(GOALParser.ENVIRONMENTAL, 0); }
		public TerminalNode CLBR() { return getToken(GOALParser.CLBR, 0); }
		public TerminalNode INTERNAL() { return getToken(GOALParser.INTERNAL, 0); }
		public ActionPostContext actionPost() {
			return getRuleContext(ActionPostContext.class,0);
		}
		public ActionSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionSpec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitActionSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionSpecContext actionSpec() throws RecognitionException {
		ActionSpecContext _localctx = new ActionSpecContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_actionSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175); function();
			setState(177);
			_la = _input.LA(1);
			if (_la==ENVIRONMENTAL || _la==INTERNAL) {
				{
				setState(176);
				_la = _input.LA(1);
				if ( !(_la==ENVIRONMENTAL || _la==INTERNAL) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			setState(179); match(CLBR);
			setState(180); actionPre();
			setState(181); actionPost();
			setState(182); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionPreContext extends ParserRuleContext {
		public TerminalNode CRBR() { return getToken(GOALParser.CRBR, 0); }
		public TerminalNode KR_BLOCK(int i) {
			return getToken(GOALParser.KR_BLOCK, i);
		}
		public TerminalNode PRE() { return getToken(GOALParser.PRE, 0); }
		public TerminalNode CLBR() { return getToken(GOALParser.CLBR, 0); }
		public List<TerminalNode> KR_BLOCK() { return getTokens(GOALParser.KR_BLOCK); }
		public ActionPreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionPre; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALParserVisitor ) return ((GOALParserVisitor<? extends T>)visitor).visitActionPre(this);
			else return visitor.visitChildren(this);
		}
	}
